--- a/app/src/main/res/layout/album_list_item_variant.xml
+++ b/app/src/main/res/layout/album_list_item_variant.xml
@@ -30,6 +30,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:contentDescription="@string/description_album_image"
+                android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
