--- a/app/src/main/res/menu/artistic_fragment_menu.xml
+++ b/app/src/main/res/menu/artistic_fragment_menu.xml
@@ -7,4 +7,9 @@
         android:title="@string/item_menu_search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_toolbar_logout"
+        android:icon="@drawable/ic_baseline_exit_to_app_24"
+        android:title="@string/item_menu_logout"
+        app:showAsAction="ifRoom" />
 </menu>
