--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/artistFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/artistFragment"
@@ -13,10 +13,32 @@
         <action
             android:id="@+id/action_artistFragment_to_albumFragment"
             app:destination="@id/albumFragment" />
+        <action
+            android:id="@+id/action_artistFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/artistFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/albumFragment"
         android:name="co.demo.spotifydemo.view.AlbumFragment"
         android:label="album_fragment"
-        tools:layout="@layout/album_fragment" />
+        tools:layout="@layout/album_fragment" >
+        <argument
+            android:name="albumSelected"
+            app:argType="co.demo.spotifydemo.model.data.Album" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="co.demo.spotifydemo.view.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_artistFragment"
+            app:destination="@id/artistFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
