--- a/app/src/main/res/layout/artist_list_item.xml
+++ b/app/src/main/res/layout/artist_list_item.xml
@@ -135,24 +135,69 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_title_artist_popularity"
                 app:layout_constraintStart_toEndOf="@id/tv_artist_followers"
                 app:layout_constraintEnd_toEndOf="@id/tv_artist_name"
-                app:layout_constraintBottom_toTopOf="@+id/rv_album_list"
+                app:layout_constraintBottom_toTopOf="@+id/ll_artist_album_dropdown"
                 />
 
 
-            <!--TODO: CG 20220122 ADD RECYCLERVIEW ALBUM-->
+            <LinearLayout
+                android:id="@+id/ll_artist_album_dropdown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/iv_artist_image"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/rv_album_list"
+                >
+
+                <View
+                    android:id="@+id/v_divider"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"
+                    android:background="@color/grey" />
+
+                <TextView
+                    android:id="@+id/tv_artist_album_dropdown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="8dp"
+                    android:layout_marginHorizontal="8dp"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:padding="4dp"
+                    android:singleLine="true"
+                    android:text="@string/title_expand_artist_album_dropdown"
+                    android:textAlignment="textEnd"
+                    android:textAppearance="@style/subtitle_text_2"
+                    tools:ignore="RtlCompat" />
+
+                <ImageView
+                    android:id="@+id/iv_artist_album_dropdown"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/ic_baseline_arrow_drop_down_24"
+                    android:ellipsize="end"
+                    android:gravity="right"
+                    android:padding="8dp"
+                    tools:ignore="RtlHardcoded" />
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_album_list"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 tools:itemCount="3"
                 tools:listitem="@layout/album_list_item_variant"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_artist_image"
+                app:layout_constraintTop_toBottomOf="@id/ll_artist_album_dropdown"
                 app:layout_constraintEnd_toEndOf="parent"
                 />
 
